# VectorMessenger_Zero

./: .gitignore  CHANGELOG.md  Messenger.py  MessengerCore.py  Pipfile  README.md  build.py  client.py  compile.py  helpers.py  main.py  pyproject.toml  run_client.sh  run_server.sh  server.py  setup.py  test.py
VectorMessenger/: __init__.py  build.py  client.py  client_legacy_gui.py  client_web.py  client_web_gui.py  helpers.py  server.py
VectorMessenger/MessengerCore/: CoreClient.py  CoreServer.py  Encryption.py  Messages.py  MessengerBase.py
VectorMessenger/MessengerCore/Helpers/: Client.py  Global.py
VectorMessenger/data/src/: index.html
VectorMessenger/data/src/styles/: chat.css
vector_messenger/: __init__.py  client.py  client_legacy_gui.py  client_web_gui.py  server.py
vector_messenger/core/: client.py  encryption.py  server.py
vector_messenger/core/helpers/: client.py
vector_messenger/data/src/: index.html
vector_messenger/data/src/scripts/: fetch_messages.js  vector_messenger_core.js
vector_messenger/data/src/styles/: chat.css
vector_messenger/helpers/: client.py  general.py
