[tool.poetry]
name = "vector_messenger"
version = "0.0.0"
description = ""
authors = ["maximilionus <xxxarakxxx@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
client = "vector_messenger.client:run_source"
server = "vector_messenger.server:run_source"

[tool.poetry.dependencies]
python = ">=3.7.0 <3.8"
pyAesCrypt = "^0.4.3"
pillow = "^7.2.0"
pyinstaller = "^3.6"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"
pywebview = "^3.3.2"
flask = "^1.1.2"
ujson = "^3.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
